# app/Http/Controllers/Api/AuthController.php
@@ -7,11 +7,14 @@ use App\Dto\Response\Api\ApiLoginResponseSuccessDto;
 use App\Http\Controllers\Controller;
 use App\Http\Requests\ApiDoLoginRequest;
 use App\Models\User;
+use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
 use Illuminate\Http\Response;
 use Illuminate\Support\Facades\Hash;
 use Illuminate\Validation\ValidationException;
 use Laravel\Sanctum\PersonalAccessToken;
+use OpenApi\Attributes as SWG;
+use Symfony\Component\HttpFoundation\Response as ResponseAlias;
 use Symfony\Component\HttpKernel\Exception\AccessDeniedHttpException;
 
 class AuthController extends Controller
@@ -19,7 +22,48 @@ class AuthController extends Controller
     /**
      * @throws ValidationException
      */
-    public function login(ApiDoLoginRequest $request): array
+    #[SWG\Post(
+        path: '/login',
+        operationId: 'getAccessToken',
+        summary: 'Get access token by login and password',
+        requestBody: new SWG\RequestBody(
+            required: true,
+            content: new SWG\JsonContent(
+                ref: '#/components/schemas/ApiLoginDto',
+            ),
+        ),
+        responses: [
+            new SWG\Response(
+                response: ResponseAlias::HTTP_OK,
+                description: 'Success credentials. Return access Bearer token.',
+                content: [
+                    new SWG\JsonContent(ref: '#/components/schemas/ApiLoginResponseSuccessDto')
+                ]
+            ),
+            new SWG\Response(
+                response: ResponseAlias::HTTP_FORBIDDEN,
+                description: 'Invalid credentials',
+                content: [
+                    new SWG\JsonContent(ref: '#/components/schemas/ApiErrorResponseDto'),
+                ]
+            ),
+            new SWG\Response(
+                response: ResponseAlias::HTTP_BAD_REQUEST,
+                description: 'Errors',
+                content: [
+                    new SWG\JsonContent(ref: '#/components/schemas/ApiErrorResponseDto'),
+                ],
+            ),
+            new SWG\Response(
+                response: ResponseAlias::HTTP_UNPROCESSABLE_ENTITY,
+                description: 'Validation error',
+                content: [
+                    new SWG\JsonContent(ref: '#/components/schemas/ApiValidationDto'),
+                ],
+            ),
+        ],
+    )]
+    public function login(ApiDoLoginRequest $request): JsonResponse
     {
         $dto = new ApiLoginDto(...$request->validated());
         /** @var User|null $user */
@@ -29,10 +73,27 @@ class AuthController extends Controller
             throw new AccessDeniedHttpException(trans('These credentials do not match our records.'));
         }
 
-        return (array)new ApiLoginResponseSuccessDto($user->createToken($dto->device)->plainTextToken);
+        $dtoResponse = new ApiLoginResponseSuccessDto(
+            token: $user->createToken($dto->device)->plainTextToken,
+            device: $dto->device
+        );
+
+        return response()->json((array)$dtoResponse);
     }
 
-    public function logout(Request $request): Response
+    #[SWG\Delete(
+        path: '/invalidate-token',
+        operationId: 'invalidatedAccessToken',
+        description: 'Invalidate access token',
+        security: ['apiKey'],
+    )]
+    #[SWG\Response(response: ResponseAlias::HTTP_NO_CONTENT, description: 'Access token was invalidated')]
+    #[SWG\Response(
+        response: ResponseAlias::HTTP_UNAUTHORIZED,
+        description: 'Error message',
+        content: [new SWG\JsonContent(ref: '#/components/schemas/ApiErrorResponseDto')])
+    ]
+    public function invalidateToken(Request $request): Response
     {
         PersonalAccessToken::findToken($request->bearerToken())->delete();
 
